--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
-    "bootstrap": "^5.3.5",
+    "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.11.3",
     "i": "^0.3.7",
+    "ngx-toastr": "^19.0.0",
     "npm": "^11.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
