--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.11.3",
     "i": "^0.3.7",
+    "jwt-decode": "^4.0.0",
     "ngx-toastr": "^19.0.0",
     "npm": "^11.3.0",
     "rxjs": "~7.8.0",
